# hw3-jcollins36855

./: .gitignore  Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: test_readligo.py  test_utils.py  utils.py
